// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpandableList /> should render with a Item 1`] = `
<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={false}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <ExpandableListItem__ItemWrap
        padded={true}
      >
        <li
          className="ExpandableListItem__ItemWrap-sc-10hsq3a-0 ghQcld"
        >
          <ExpandableListItem__Container>
            <div
              className="ExpandableListItem__Container-sc-10hsq3a-1 hYIMSn"
            >
              <Checkbox
                bsClass="checkbox"
                checked={false}
                disabled={false}
                inline={true}
                inputRef={[Function]}
                onChange={[MockFunction]}
                title=""
              >
                <label
                  className="checkbox-inline"
                  title=""
                >
                  <input
                    checked={false}
                    disabled={false}
                    onChange={[MockFunction]}
                    type="checkbox"
                  />
                </label>
              </Checkbox>
              <ExpandableListItem__Toggle>
                <div
                  className="ExpandableListItem__Toggle-sc-10hsq3a-2 xBomU"
                >
                  <ExpandableListItem__IconStack
                    className="fa-stack"
                    onClick={[Function]}
                    tabIndex={0}
                  >
                    <div
                      className="ExpandableListItem__IconStack-sc-10hsq3a-3 dEjoPz fa-stack"
                      onClick={[Function]}
                      tabIndex={0}
                    >
                      <Icon
                        className="fa-stack-1x"
                        name="circle"
                        type="solid"
                      >
                        <FontAwesomeIcon
                          className="fa-stack-1x"
                          icon={
                            Object {
                              "iconName": "circle",
                              "prefix": "fas",
                            }
                          }
                        >
                          <svg
                            className="svg-inline--fa fa-circle"
                          />
                        </FontAwesomeIcon>
                      </Icon>
                      <Icon
                        className="fa-stack-1x"
                        name="angle-up"
                        type="solid"
                      >
                        <FontAwesomeIcon
                          className="fa-stack-1x"
                          icon={
                            Object {
                              "iconName": "angle-up",
                              "prefix": "fas",
                            }
                          }
                        >
                          <svg
                            className="svg-inline--fa fa-angle-up"
                          />
                        </FontAwesomeIcon>
                      </Icon>
                    </div>
                  </ExpandableListItem__IconStack>
                </div>
              </ExpandableListItem__Toggle>
              <ExpandableListItem__HeaderWrap
                className="header"
              >
                <span
                  className="ExpandableListItem__HeaderWrap-sc-10hsq3a-4 tDeuS header"
                >
                  <ExpandableListItem__Header
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <button
                      className="ExpandableListItem__Header-sc-10hsq3a-5 cAgeBx"
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      Wheel of time
                    </button>
                  </ExpandableListItem__Header>
                </span>
              </ExpandableListItem__HeaderWrap>
            </div>
          </ExpandableListItem__Container>
          <ExpandableListItem__ExpandableContent>
            <div
              className="ExpandableListItem__ExpandableContent-sc-10hsq3a-7 hICkaB"
            />
          </ExpandableListItem__ExpandableContent>
        </li>
      </ExpandableListItem__ItemWrap>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with a nested ExpandableList 1`] = `
<ExpandableList>
  <ul
    className="list"
  >
    <ExpandableListItem
      checked={false}
      expandable={true}
      expanded={true}
      header="Wheel of time"
      indetermined={false}
      onChange={[MockFunction]}
      padded={true}
      selectable={true}
      stayExpanded={false}
    >
      <ExpandableListItem__ItemWrap
        padded={true}
      >
        <li
          className="ExpandableListItem__ItemWrap-sc-10hsq3a-0 ghQcld"
        >
          <ExpandableListItem__Container>
            <div
              className="ExpandableListItem__Container-sc-10hsq3a-1 hYIMSn"
            >
              <Checkbox
                bsClass="checkbox"
                checked={false}
                disabled={false}
                inline={true}
                inputRef={[Function]}
                onChange={[MockFunction]}
                title=""
              >
                <label
                  className="checkbox-inline"
                  title=""
                >
                  <input
                    checked={false}
                    disabled={false}
                    onChange={[MockFunction]}
                    type="checkbox"
                  />
                </label>
              </Checkbox>
              <ExpandableListItem__Toggle>
                <div
                  className="ExpandableListItem__Toggle-sc-10hsq3a-2 xBomU"
                >
                  <ExpandableListItem__IconStack
                    className="fa-stack"
                    onClick={[Function]}
                    tabIndex={0}
                  >
                    <div
                      className="ExpandableListItem__IconStack-sc-10hsq3a-3 dEjoPz fa-stack"
                      onClick={[Function]}
                      tabIndex={0}
                    >
                      <Icon
                        className="fa-stack-1x"
                        name="circle"
                        type="solid"
                      >
                        <FontAwesomeIcon
                          className="fa-stack-1x"
                          icon={
                            Object {
                              "iconName": "circle",
                              "prefix": "fas",
                            }
                          }
                        >
                          <svg
                            className="svg-inline--fa fa-circle"
                          />
                        </FontAwesomeIcon>
                      </Icon>
                      <Icon
                        className="fa-stack-1x"
                        name="angle-down"
                        type="solid"
                      >
                        <FontAwesomeIcon
                          className="fa-stack-1x"
                          icon={
                            Object {
                              "iconName": "angle-down",
                              "prefix": "fas",
                            }
                          }
                        >
                          <svg
                            className="svg-inline--fa fa-angle-down"
                          />
                        </FontAwesomeIcon>
                      </Icon>
                    </div>
                  </ExpandableListItem__IconStack>
                </div>
              </ExpandableListItem__Toggle>
              <ExpandableListItem__HeaderWrap
                className="header"
              >
                <span
                  className="ExpandableListItem__HeaderWrap-sc-10hsq3a-4 tDeuS header"
                >
                  <ExpandableListItem__Header
                    onClick={[Function]}
                    tabIndex={0}
                    type="button"
                  >
                    <button
                      className="ExpandableListItem__Header-sc-10hsq3a-5 cAgeBx"
                      onClick={[Function]}
                      tabIndex={0}
                      type="button"
                    >
                      Wheel of time
                    </button>
                  </ExpandableListItem__Header>
                </span>
              </ExpandableListItem__HeaderWrap>
            </div>
          </ExpandableListItem__Container>
          <ExpandableListItem__ExpandableContent>
            <div
              className="ExpandableListItem__ExpandableContent-sc-10hsq3a-7 hICkaB"
            >
              <ExpandableList>
                <ul
                  className="list"
                >
                  <ExpandableListItem
                    checked={false}
                    expandable={true}
                    expanded={false}
                    header="Edmonds Field"
                    indetermined={false}
                    onChange={[MockFunction]}
                    padded={true}
                    selectable={true}
                    stayExpanded={false}
                  >
                    <ExpandableListItem__ItemWrap
                      padded={true}
                    >
                      <li
                        className="ExpandableListItem__ItemWrap-sc-10hsq3a-0 ghQcld"
                      >
                        <ExpandableListItem__Container>
                          <div
                            className="ExpandableListItem__Container-sc-10hsq3a-1 hYIMSn"
                          >
                            <Checkbox
                              bsClass="checkbox"
                              checked={false}
                              disabled={false}
                              inline={true}
                              inputRef={[Function]}
                              onChange={[MockFunction]}
                              title=""
                            >
                              <label
                                className="checkbox-inline"
                                title=""
                              >
                                <input
                                  checked={false}
                                  disabled={false}
                                  onChange={[MockFunction]}
                                  type="checkbox"
                                />
                              </label>
                            </Checkbox>
                            <ExpandableListItem__Toggle>
                              <div
                                className="ExpandableListItem__Toggle-sc-10hsq3a-2 xBomU"
                              >
                                <ExpandableListItem__IconStack
                                  className="fa-stack"
                                  onClick={[Function]}
                                  tabIndex={0}
                                >
                                  <div
                                    className="ExpandableListItem__IconStack-sc-10hsq3a-3 dEjoPz fa-stack"
                                    onClick={[Function]}
                                    tabIndex={0}
                                  >
                                    <Icon
                                      className="fa-stack-1x"
                                      name="circle"
                                      type="solid"
                                    >
                                      <FontAwesomeIcon
                                        className="fa-stack-1x"
                                        icon={
                                          Object {
                                            "iconName": "circle",
                                            "prefix": "fas",
                                          }
                                        }
                                      >
                                        <svg
                                          className="svg-inline--fa fa-circle"
                                        />
                                      </FontAwesomeIcon>
                                    </Icon>
                                    <Icon
                                      className="fa-stack-1x"
                                      name="angle-up"
                                      type="solid"
                                    >
                                      <FontAwesomeIcon
                                        className="fa-stack-1x"
                                        icon={
                                          Object {
                                            "iconName": "angle-up",
                                            "prefix": "fas",
                                          }
                                        }
                                      >
                                        <svg
                                          className="svg-inline--fa fa-angle-up"
                                        />
                                      </FontAwesomeIcon>
                                    </Icon>
                                  </div>
                                </ExpandableListItem__IconStack>
                              </div>
                            </ExpandableListItem__Toggle>
                            <ExpandableListItem__HeaderWrap
                              className="header"
                            >
                              <span
                                className="ExpandableListItem__HeaderWrap-sc-10hsq3a-4 tDeuS header"
                              >
                                <ExpandableListItem__Header
                                  onClick={[Function]}
                                  tabIndex={0}
                                  type="button"
                                >
                                  <button
                                    className="ExpandableListItem__Header-sc-10hsq3a-5 cAgeBx"
                                    onClick={[Function]}
                                    tabIndex={0}
                                    type="button"
                                  >
                                    Edmonds Field
                                  </button>
                                </ExpandableListItem__Header>
                              </span>
                            </ExpandableListItem__HeaderWrap>
                          </div>
                        </ExpandableListItem__Container>
                        <ExpandableListItem__ExpandableContent>
                          <div
                            className="ExpandableListItem__ExpandableContent-sc-10hsq3a-7 hICkaB"
                          />
                        </ExpandableListItem__ExpandableContent>
                      </li>
                    </ExpandableListItem__ItemWrap>
                  </ExpandableListItem>
                </ul>
              </ExpandableList>
            </div>
          </ExpandableListItem__ExpandableContent>
        </li>
      </ExpandableListItem__ItemWrap>
    </ExpandableListItem>
  </ul>
</ExpandableList>
`;

exports[`<ExpandableList /> should render with no children 1`] = `
<ExpandableList>
  <ul
    className="list"
  />
</ExpandableList>
`;
